# simplepass

./: .gitignore  CLAUDE.md  README.md  dark-theme-proposal.html  index.html  package-lock.json  package.json  ui-polish-proposal.html  vite.config.ts
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
design/: 1-aurora-glass.html  2-nord-slate.html  3-warm-paper.html  4-terminal-mono.html  5-sunset-pop.html  icons.html  titlebar-variants.html
src/: App.tsx  FloatingIcon.tsx  main.tsx  styles.css  tauri.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
